# AE-ENGINE

./: .gitignore  3A渲染技术调研.md  AE-ENGINE_终极设计文档_v1.0.md  ARCHITECTURE_V7.md  ARCHITECTURE_V7_CRITIQUE.md  Cargo.toml  FEATURE_DEMO.md  LICENSE  README.md  REARCHITECTURE_PLAN.md  RESOURCE_INDEX.md  RULES.md  SETUP_COMPLETE.md  TECH_ROADMAP.md  auto_launch.bat  clippy.toml  config.toml  demo_data.csv  demo_stderr.csv  demo_stdout.txt  fix_rigidbody.ps1  launch_game.bat  refactor.ps1  refactor_propagate.ps1  replace_q.ps1  rustfmt.toml  screenshot.ps1  spec.md  stat.py  test_q.txt  update_audio_deps.py  water_out.txt  write_terrain.ps1  废土创世_终极设计文档_v1.0.md  架构总览.md
ae_ai/: Cargo.toml
ae_ai/src/: goap.rs  utility.rs
ae_asset_pipeline/: Cargo.toml
ae_asset_pipeline/src/: lib.rs
ae_character/: Cargo.toml
ae_character/src/: behavior.rs  cosserat_rod.rs  fabrik.rs  force_feedback.rs  surface_contact.rs  surface_stats.rs
ae_engine/: Cargo.toml
ae_engine/benches/: engine_tick_bench.rs
ae_engine/src/: animation_manager.rs  asset_quality.rs  ecs.rs  interaction_system.rs  lib.rs  memory_manager.rs  navigation_manager.rs  vram_manager.rs
ae_engine/src/architecture/: cross_domain_events.rs  event.rs  mod.rs  system.rs
ae_engine/src/managers/: data.rs  domain_isolation.rs  game_logic.rs  mod.rs  modding.rs  rendering.rs  simulation.rs
ae_engine/tests/: integration_tests.rs
ae_eventbus/: Cargo.toml
ae_eventbus/src/: aggregation.rs  bus.rs  event.rs  replay.rs
ae_game/: Cargo.toml
ae_game/src/: lib.rs
ae_game/src/combat/: mod.rs  optimizer.rs
ae_game/src/economy/: inventory.rs  mod.rs  recipe.rs  trader.rs
ae_game/src/infection/: mod.rs  stage.rs  voxel.rs
ae_game/src/npc/: ai_optimizer.rs  manager.rs  mod.rs  scripting.rs  system.rs
ae_generalizer/: Cargo.toml
ae_generalizer/src/: cache.rs  inference.rs  lib.rs  property_space.rs
ae_metaentity/: Cargo.toml
ae_metaentity/src/: boundary.rs  interaction.rs  interaction_cache.rs  lib.rs  meta_entity.rs  structural_field.rs
ae_modding/: Cargo.toml
ae_modding/src/: lib.rs  registry.rs
ae_modding/src/runtime/: lua_runtime.rs  mod_instance.rs
ae_pathfinding/: Cargo.toml
ae_registry/: Cargo.toml
ae_registry/src/: lib.rs
ae_render/: Cargo.toml  LICENSE  README.md
ae_render/src/: camera.rs  device.rs  instanced.rs  lib.rs  material.rs  mesh.rs  mesh_renderer.rs  model.rs  particles.rs  pipeline.rs  post_process.rs  shader.rs  shadow_map.rs  skybox.rs  ssao.rs  ssr.rs  surface.rs  taa.rs  texture.rs  volumetric_fog.rs  water.rs
ae_render/src/procedural/: action.rs  building.rs  damage.rs  geometry.rs  mod.rs  morph.rs  npc.rs  skeleton.rs  texture.rs
ae_save_system/: Cargo.toml
ae_save_system/src/: lib.rs
ae_scheduler/: Cargo.toml
ae_scheduler/src/: lib.rs
ae_simd/: Cargo.toml
ae_simd/benches/: extended_bench.rs  simd_bench.rs
ae_simd/src/: asm_kernels.rs  lib.rs  mat4_asm.rs  simd_vec.rs
ae_thermo_sandbox/: Cargo.toml
ae_thermo_sandbox/src/: lib.rs  materials.rs  npc_cognitive.rs  npc_entity.rs  npc_entity.rs.bak_h5
ae_unified_interface/: Cargo.toml
ae_unified_interface/src/: lib.rs
ae_weave/: Cargo.toml
ae_weave/src/: constraint.rs  fracture.rs  lib.rs  network.rs  solver.rs
editor/: Cargo.toml  PROGRESS.md
editor/src/: app.rs  camera.rs  engine_bridge.rs  engine_types.rs  gizmo.rs  lib.rs  main.rs  scene.rs  scene_io.rs  selection.rs  settings.rs  shortcut.rs  undo_redo.rs
editor/src/commands/: mod.rs
editor/src/mcp/: bridge.rs  mod.rs  scene_snapshot.rs  server.rs  tools.rs  transport.rs
editor/src/panels/: about.rs  addressables.rs  anim_blueprint.rs  anim_notify.rs  animation_timeline.rs  asset_browser.rs  audio_mixer.rs  behavior_tree_editor.rs  blueprint_editor.rs  bookmarks.rs  cinemachine_panel.rs  collection_manager.rs  collections.rs  color_picker.rs  compositor.rs  console.rs  constraints_panel.rs  content_drawer.rs  control_rig.rs  hierarchy.rs  (+61 more)
editor/tests/: mcp_bridge.rs  mcp_tools.rs
game/: Cargo.toml
game/src/: main.rs
gdextension/: Cargo.toml  check_errors.txt  compile_errors.txt
gdextension/src/: acoustics_node.rs  ai_bridge_node.rs  ai_node.rs  ai_tools_node.rs  animation_node.rs  asset_node.rs  audio_node.rs  axiom_node.rs  biology_node.rs  character_node.rs  chemistry_node.rs  compute_node.rs  crafting_node.rs  ecology_node.rs  electro_node.rs  emergence_node.rs  eventbus_node.rs  factory_node.rs  field_node.rs  fluid_node.rs  frequency_node.rs  generalizer_node.rs  geo_node.rs  hydro_node.rs  info_node.rs  io_node.rs  lib.rs  materials_node.rs  memory_node.rs  meta_node.rs  modding_node.rs  mpss_node.rs  network_node.rs  npc_node.rs  optics_node.rs  particle_node.rs  pathfinding_node.rs  physics_node.rs  profiler_node.rs  serialize_node.rs  (+8 more)
nova_render/: Cargo.toml  PROGRESS.md  README.md  write_app.ps1
nova_render/examples/: composite_demo.rs  forward_demo.rs  hello_triangle.rs  skybox_demo.rs
nova_render/src/: application.rs  lib.rs
wasteland_acoustics/: Cargo.toml
wasteland_acoustics/src/: lib.rs  reverb.rs  synthesis.rs  wave_gpu.rs
wasteland_ai/: Cargo.toml
wasteland_ai/src/: behavior_tree.rs  emotion.rs  lib.rs  memory.rs
wasteland_ai_tools/: Cargo.toml
wasteland_ai_tools/benches/: ai_bench.rs
wasteland_ai_tools/src/: lib.rs  llm.rs  model_downloader.rs  npc_knowledge.rs  rag.rs  world_gen.rs
wasteland_animation/: Cargo.toml
wasteland_asset_pipeline/: Cargo.toml
wasteland_asset_pipeline/src/: lib.rs
wasteland_biology/: AAA_EXPANSION_PLAN.md  Cargo.toml  PROGRESS.md  README.md  check.ps1
wasteland_biology/src/: .append_regeneration.rs.txt  aging.rs  biomineralization.rs  blood.rs  cancer.rs  digestive.rs  disease.rs  ecosystem.rs  epigenetics.rs  evolution.rs  excretory.rs  genome.rs  immune_system.rs  lib.rs  metabolism.rs  organisms.rs  organs.rs  perception.rs  regeneration.rs  respiratory.rs  soft_tissue.rs  stress_response.rs  symbiosis.rs  thermoregulation.rs  toxicology.rs
wasteland_biomech/: Cargo.toml
wasteland_biomech/src/: lib.rs  prendergast.rs  prosthetics.rs  wolff_remodeling.rs
(+856 files in other folders)
