[workspace]
resolver = "2"
members = [
    "ae_physics",
    "ae_chemistry",
    "ae_biology",
    "ae_biomech",
    "ae_engine",
    "ae_game",
    "ae_field",
    "ae_cpp_kernel",
    "ae_particle",
    "ae_emergence",
    "ae_timeslice",
    "ae_metaentity",
    "ae_eventbus",
    "ae_crafting",
    "ae_modding",
    "gdextension", "ae_weave", "ae_generalizer",
    "ae_frequency",
    "ae_thermo",
    "ae_thermo_sandbox",
    "ae_electro",
    "ae_materials",
    "ae_fluid",
    "ae_acoustics",
    "ae_optics",
    "ae_geo",
    "ae_weather",
    "ae_hydro",
    "ae_eco",
    "ae_factory",
    "ae_axiom",
    "ae_info",
    "ae_simd",
    "ae_xpbd",
    "ae_character",
    "ae_ai",
    "ae_memory",
    "ae_compute",
    "ae_audio",
    "ae_storage",
    "ae_network",
    "ae_profiler",
    "ae_io",
    "ae_asset",
    "ae_serialize",
    "ae_ai_tools",
    "ae_ai_bridge",
    "ae_pathfinding",
    "ae_animation",
    "ae_terrain",
    "ae_render",
    "nova_render",
    "ae_unified_interface",
    "ae_scheduler",
    "ae_registry",
    "ae_save_system",
    "ae_asset_pipeline",
    "ae_bvh",
    "ae_physchem",
    "ae_botany",
    "editor",
    "game",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ae team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["serde"] }
kf-editor = { path = "../KF/editor" }
rolt = "0.3"
joltc-sys = "0.3"
bevy = { version = "0.15", default-features = false }
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
slotmap = { version = "1", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
arrayvec = "0.7"
hashbrown = { version = "0.15", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1"
toml = "0.8"
lru = "0.12"
bitflags = { version = "2", features = ["serde"] }
flate2 = "1"
fixed = "1"
criterion = "0.5"
cpal = "0.15"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
wgpu = "24"
image = "0.25"
ddsfile = "0.5"
gltf = "1"
raw-window-handle = "0.6"
pollster = "0.4"
rfd = "0.15"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
egui_dock = "0.16"
winit = "0.30"
anyhow = "1"
env_logger = "0.11"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-pgo]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
