[package]
name = "ae_ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
glam.workspace = true
uuid.workspace = true
rand.workspace = true
ae_physics = { path = "../ae_physics" }
ae_info = { path = "../ae_info" }