[package]
name = "ae_asset_pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
ae_metaentity = { path = "../ae_metaentity" }