[package]
name = "ae_eventbus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
hashbrown = { workspace = true }
smallvec = { workspace = true }
log = { workspace = true }
glam = { workspace = true }