[package]
name = "ae_game"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ae_ai = { path = "../ae_ai" }
ae_ai_bridge = { path = "../ae_ai_bridge" }
serde.workspace = true
serde_json.workspace = true
glam.workspace = true
log.workspace = true
uuid.workspace = true
slotmap.workspace = true
hashbrown.workspace = true
rand.workspace = true
smallvec.workspace = true
