[package]
name = "ae_generalizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
log.workspace = true
hashbrown.workspace = true
lru.workspace = true
rand.workspace = true
ae_physics = { path = "../ae_physics" }
