[package]
name = "ae_modding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
parking_lot = "0.12"
