[package]
name = "ae_pathfinding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
glam = { workspace = true }
hashbrown = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true }
log = { workspace = true }