[package]
name = "ae_save_system"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
hashbrown = { workspace = true }
slotmap = { workspace = true }
log = { workspace = true }
flate2 = { workspace = true }
ae_metaentity = { path = "../ae_metaentity" }
ae_unified_interface = { path = "../ae_unified_interface" }