[package]
name = "ae_scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
slotmap = { workspace = true }
hashbrown = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
ae_metaentity = { path = "../ae_metaentity" }
ae_unified_interface = { path = "../ae_unified_interface" }