[package]
name = "ae_simd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
bytemuck.workspace = true
glam.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "simd_bench"
harness = false