[package]
name = "ae_unified_interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true }
hashbrown = { workspace = true }
rayon = { workspace = true }
ae_metaentity = { path = "../ae_metaentity" }