[package]
name = "wasteland-game"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "wasteland-game"
path = "src/main.rs"

[[bin]]
name = "world_viewer"
path = "src/bin/world_viewer.rs"

[dependencies]
glam.workspace = true
log.workspace = true
env_logger = "0.11"
wasteland_engine = { path = "../wasteland_engine" }
wasteland_particle = { path = "../wasteland_particle" }
wasteland_render = { path = "../wasteland_render" }
wasteland_terrain = { path = "../wasteland_terrain" }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
