[package]
name = "ae-game"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ae-game"
path = "src/main.rs"

[[bin]]
name = "world_viewer"
path = "src/bin/world_viewer.rs"

[dependencies]
glam.workspace = true
log.workspace = true
env_logger = "0.11"
ae_engine = { path = "../ae_engine" }
ae_particle = { path = "../ae_particle" }
ae_render = { path = "../ae_render" }
ae_terrain = { path = "../ae_terrain" }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
