[package]
name = "ae_gdextension"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ae_engine = { path = "../ae_engine" }
ae_physics = { path = "../ae_physics" }
ae_ai = { path = "../ae_ai" }
ae_ai_bridge = { path = "../ae_ai_bridge" }
ae_ai_tools = { path = "../ae_ai_tools" }
ae_character = { path = "../ae_character" }
ae_metaentity = { path = "../ae_metaentity" }
ae_chemistry = { path = "../ae_chemistry" }
ae_materials = { path = "../ae_materials" }
ae_audio = { path = "../ae_audio" }
ae_profiler = { path = "../ae_profiler" }
ae_storage = { path = "../ae_storage" }
ae_network = { path = "../ae_network" }
ae_compute = { path = "../ae_compute" }
ae_memory = { path = "../ae_memory" }
ae_timeslice = { path = "../ae_timeslice" }
ae_frequency = { path = "../ae_frequency" }
ae_eventbus = { path = "../ae_eventbus" }
ae_weave = { path = "../ae_weave" }
ae_xpbd = { path = "../ae_xpbd" }
ae_simd = { path = "../ae_simd" }
ae_io = { path = "../ae_io" }
ae_asset = { path = "../ae_asset" }
ae_serialize = { path = "../ae_serialize" }
ae_pathfinding = { path = "../ae_pathfinding" }
ae_animation = { path = "../ae_animation" }
ae_terrain = { path = "../ae_terrain" }
ae_particle = { path = "../ae_particle" }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
glam.workspace = true
uuid.workspace = true
rand = "0.8"
slotmap.workspace = true