[package]
name = "wasteland_acoustics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
log.workspace = true
glam.workspace = true
hashbrown.workspace = true
uuid.workspace = true
bytemuck.workspace = true

[dependencies.wgpu]
workspace = true
optional = true

[features]
default = []
# GPU FDTD (WaveBlender) — 需要 wgpu 设备
gpu = ["wgpu"]