[package]
name = "wasteland_ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
glam.workspace = true
uuid.workspace = true
rand.workspace = true
wasteland_physics = { path = "../wasteland_physics" }
wasteland_info = { path = "../wasteland_info" }