[package]
name = "wasteland_ai_tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "ai_bench"
harness = false