[package]
name = "wasteland_asset_pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
wasteland_metaentity = { path = "../wasteland_metaentity" }