[package]
name = "wasteland_biology"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
glam.workspace = true
log.workspace = true
uuid.workspace = true
slotmap.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true