[package]
name = "wasteland_biomech"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
glam.workspace = true
log.workspace = true
uuid.workspace = true
slotmap.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
rand.workspace = true
rayon.workspace = true
